--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // spring data jpa
+    runtimeOnly 'com.h2database:h2' // in memory database
+    compileOnly 'org.projectlombok:lombok' // lombok
+    annotationProcessor 'org.projectlombok:lombok' // lombok annotation의 실행
 }
 
 test {
